force-app/main/default/objects/Property_Inspection__c/Property_Inspection__c.object-meta.xml
<CustomObject>
    <label>Property Inspection</label>
    <nameField>
        <label>Property Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Inspection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>