force-app/main/default/objects/Property_Inspection__c/fields/Day_Since_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Day_Since_Inspection__c</fullName>
    <formula>TODAY() - Inspection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Since Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>