force-app/main/default/objects/Property_Inspection__c/fields/Inspection_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Cost__c</fullName>
    <label>Inspection Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>